--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
+    "mydatepicker": "^2.6.3",
     "ngx-pagination": "^3.1.1",
     "rxjs": "^6.0.0",
     "sweetalert2": "^7.25.0",
